# jeffersonlab-phonebook

./: .gitignore  README.md  docker-compose.yml
frontend/: main.py
frontend/phonebook-frontend/: index.html  institutions.html  login.html  members.html
frontend/phonebook-frontend/css/: style.css
frontend/phonebook-frontend/js/: auth.js  config.js  instituions.js  institutions.js  members.js
frontendnew/phonebook-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontendnew/phonebook-frontend/src/: App.tsx  openapi.json
frontendnew/phonebook-frontend/src/client/: schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontendnew/phonebook-frontend/src/components/: AddConferenceForm.tsx  AddTalkForm.tsx  AssignTalkForm.tsx  EditConferenceForm.tsx  EditInstitutionForm.tsx  NavBar.tsx  ProtectedRoute.tsx
frontendnew/phonebook-frontend/src/context/: AuthContext.tsx
frontendnew/phonebook-frontend/src/pages/: BoardMemebersPage.tsx  ConferencePage.tsx  DashboardPage.tsx  GroupsPage.tsx  (+3 more)
nginx/: default.conf
server/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
server/jeffersonlab_phonebook/: main.py
server/jeffersonlab_phonebook/api/: deps.py  main.py
server/jeffersonlab_phonebook/api/routes/: board_members.py  groups.py  institutions.py  login.py  members.py  role.py  talk_assignment.py  talk_conference.py  utils.py
server/jeffersonlab_phonebook/config/: settings.py
server/jeffersonlab_phonebook/db/: constants.py  models.py  session.py
server/jeffersonlab_phonebook/repositories/: conference_repository.py  group_repository.py  institution_repository.py  institutionboard_repository.py  member_repository.py  role_repository.py  talk_assignment_repository.py
server/jeffersonlab_phonebook/schemas/: auth_schemas.py  board_schemas.py  conference_schemas.py  conferences_schema.py  group_schemas.py  history_schemas.py  institutions_schemas.py  members.py  members_schemas.py  response_schemas.py  role_schemas.py  talk_schemas.py
server/jeffersonlab_phonebook/services/: ror_api_client.py
(+6 files in other folders)
